# ADB

./: .gitignore  README.md  adbnotes.txt  create_user_orcldb.txt  docker-compose.yml  hello.py  pyproject.toml  script.sql
data/csvNew/: Formatted_League.csv  Formatted_Team.csv
data/csv_scripts/: README.md  country.py  league.py  main.py  pyproject.toml  sqlite_to_csv.py  teams.py
data/csv_scripts/sqlite_conversions/: sqlite_to_csv.py
data/csv_scripts/table_conversions/: league.py  matches.py  player.py  teams.py  weather.py
sql/: create_tables.sql
